# infinity-emb-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh  start_infinity.sh
.claude/: settings.local.json
